# signal_generator

./: CMakeLists.txt  README.md  graphic_drawer.cpp  main.cpp
libs/: graphics_drawer.h  signal_generator.h
